--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
