--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.1.1",
     "remark-gfm": "^4.0.0",
     "remark-rehype": "^11.1.1",
     "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.11",
     "@types/react-burger-menu": "^2.8.7",
     "@types/react-dom": "^18.3.1",
