--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-motion": "^0.4.3-beta",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
